2005-04-12  Michael Koch  <konqueror@gmx.de>

	* java/awt/print/PrinterJob.java
	(pageDialog): New method.
	(printDialog): Implemented.

2005-04-12  Michael Koch  <konqueror@gmx.de>

	* java/awt/FontMetrics.java: Reformatted.
	(getFontRenderContext): Handle case when java.awt.Graphics context is
	given.

2005-04-12  Michael Koch  <konqueror@gmx.de>

	* java/awt/FontMetrics.java
	(getStringBounds): New methods.

2005-04-12  Michael Koch  <konqueror@gmx.de>

	* java/net/NetworkInterface.java
	(NetworkInterface): Made constructor package private.
	Introduced another constructor for more addresses on one
	interface.

2005-04-12  Michael Koch  <konqueror@gmx.de>

	* native/jni/java-net/Makefile.am
	Compile new files java_net_VMInetAddress.c and
	java_net_VMNetworkInterface.

2005-04-12  Sven de Marothy  <sven@physto.se>

	* gnu/java/nio/charset/Provider.java: Add UnicodeLittle.
	* gnu/java/nio/charset/UnicodeLittle.java: New file.
	* gnu/java/nio/charset/UTF_16.java: UnicodeBig is an alias.
	* gnu/java/nio/charset/UTF_16BE.java,
	* gnu/java/nio/charset/UTF_16LE.java: No byte-order mark.
	* gnu/java/nio/charset/UTF_16Encoder.java (encodeLoop): Fixed bug.
	
2005-04-11  Michael Koch  <konqueror@gmx.de>

	* java/net/InetAddress.java
	(static): Removed.
	(getLocalHostname): Likewise.
	(lookupInaddrAny): Likewise.
	(getHostByAddr): Likewise.
	(getHostByName): Likewise.
	* java/net/NetworkInterface.java
	(static): Likewise.
	(getRealNetworkInterfaces): Likewise.
	* native/jni/java-net/java_net_InetAddress.c: Renamed to...
	* native/jni/java-net/java_net_VMInetAddress.c: New file.
	Renamed from java_net_InetAddress.c. All native methods moved to class
	VMInetAddress.
	* native/jni/java-net/java_net_NetworkInterface.c: Renamed to...
	Renamed from java_net_NetworkInterface.c. All native methods moved to
	class VMNetworkInterface.
	* native/jni/java-net/java_net_VMNetworkInterface.c: New file.
	* vm/reference/java/net/VMInetAddress.java,