@@ -1,5 +1,10 @@
 2005-04-12  Michael Koch  <konqueror@gmx.de>
 
+	* java/awt/image/RasterOp.java:
+	Fixed wrong formatting.
+
+2005-04-12  Michael Koch  <konqueror@gmx.de>
+
 	* java/awt/print/PrinterJob.java
 	(pageDialog): New method.
 	(printDialog): Implemented.
